# azercell_project1

./: pyproject.toml
.github/workflows/: ci-build.yaml
src/data/: ramen-ratings.pkl
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
src/visualization/: visualize.py
