[project]
name = "azercell_project1"
version = "0.1.0"
description = "Reproducible ML project scaffold powered by uv"
readme = "README.md"
requires-python = ">= 3.13"
authors = [{ name = "vasifvortex", email = "vasif.oruczade@gmail.com" }]
dependencies = [
    # runtime deps go here, e.g. "pandas>=2.2"
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
src_paths = ["src"]
extend_skip = ["data", "reports", "models", "notebooks"]